GearsetPOC/force-app/main/default/objects/FAQ_Live_Chat_Settings__c/FAQ_Live_Chat_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores all the Live Chat settings</description>
    <label>FAQ Live Chat Settings</label>
</CustomObject>