GearsetPOC/force-app/main/default/objects/FAQ_Live_Chat_Settings__c/fields/Chat_Field_Three__c.field-meta.xml
<CustomField>
    <fullName>Chat_Field_Three__c</fullName>
    <description>3rd field for the Javascript liveagent.init script

liveagent.init(&#39;https://d.la2w1cs.salesforceliveagent.com/chat&#39;, &#39;572g00000008OQx&#39;, &#39;XXXXXXXXXX&#39;);</description>
    <label>Chat Field 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>