GearsetPOC/force-app/main/default/objects/FAQ_Live_Chat_Settings__c/fields/Chat_Field_Two__c.field-meta.xml
<CustomField>
    <fullName>Chat_Field_Two__c</fullName>
    <description>The 2nd field within the Javascript &#39;liveagent.init&#39; string

liveagent.init(&#39;https://d.la2w1cs.salesforceliveagent.com/chat&#39;, &#39;XXXXXXXXX&#39;, &#39;00Dg0000006RFjC&#39;);</description>
    <label>Chat Field 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>