GearsetPOC/force-app/main/default/objects/FAQ_Live_Chat_Settings__c/fields/Chat_URL__c.field-meta.xml
<CustomField>
    <fullName>Chat_URL__c</fullName>
    <label>Chat URL</label>
    <type>Url</type>
</CustomField>