GearsetPOC/force-app/main/default/objects/FAQ_Live_Chat_Settings__c/fields/FR_ID__c.field-meta.xml
<CustomField>
    <fullName>FR_ID__c</fullName>
    <label>FR ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>