GearsetPOC/force-app/main/default/objects/FAQ_Live_Chat_Settings__c/fields/FR_Offline_Link__c.field-meta.xml
<CustomField>
    <fullName>FR_Offline_Link__c</fullName>
    <label>FR_Offline_Link</label>
    <type>Url</type>
</CustomField>