GearsetPOC/force-app/main/default/objects/FAQ_Live_Chat_Settings__c/fields/Javascript_URL__c.field-meta.xml
<CustomField>
    <fullName>Javascript_URL__c</fullName>
    <label>Javascript URL</label>
    <type>Url</type>
</CustomField>