GearsetPOC/force-app/main/default/objects/FAQ_Live_Chat_Settings__c/fields/NL_Offline_Link__c.field-meta.xml
<CustomField>
    <fullName>NL_Offline_Link__c</fullName>
    <label>NL_Offline_Link</label>
    <type>Url</type>
</CustomField>