GearsetPOC/force-app/main/default/objects/FAQ_Live_Chat_Settings__c/fields/UK_ID__c.field-meta.xml
<CustomField>
    <fullName>UK_ID__c</fullName>
    <label>UK ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>