GearsetPOC/force-app/main/default/objects/FAQ_Live_Chat_Settings__c/fields/UK_Offline_Link__c.field-meta.xml
<CustomField>
    <fullName>UK_Offline_Link__c</fullName>
    <description>Content page link when Live Chat is offline</description>
    <label>UK_Offline_Link</label>
    <type>Url</type>
</CustomField>