GearsetPOC/force-app/main/default/objects/FAQ_Live_Chat_Settings__c/fields/Window_Height__c.field-meta.xml
<CustomField>
    <fullName>Window_Height__c</fullName>
    <label>Window Height</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>